@@ -1,3 +1,4 @@
+- Bug fix: FENIX-14082 - fixed NPE when member was not found  [#qubIT-Fenix-2465]
 - New Feature: FENIX-14082 - Added new client for CGD Member Photo service [#qubIT-Fenix-2465]
 
 2.9.0 (02-01-2024)
